<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rectangle_radius_12"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/text_view_tourist_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/medium"
        android:textColor="@color/text_primary"
        android:textSize="22sp"
        tools:text="1 турист" />

    <View
        android:id="@+id/button_expand"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/ic_expand"
        android:clickable="true"
        android:focusable="true" />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_tourist_number"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_name"
            style="@style/Theme.Core.Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/core_input_name">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Theme.Core.Input.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_surname"
            style="@style/Theme.Core.Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/core_input_surname">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Theme.Core.Input.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_birthday"
            style="@style/Theme.Core.Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/core_input_birthday">

            <com.santalu.maskara.widget.MaskEditText
                style="@style/Theme.Core.Input.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"
                app:mask="**.**.****"
                app:maskCharacter="*"
                app:maskStyle="completable" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_citizenship"
            style="@style/Theme.Core.Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/core_input_citizenship">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Theme.Core.Input.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_passport_number"
            style="@style/Theme.Core.Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/core_input_passport_number">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Theme.Core.Input.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_validate_date"
            style="@style/Theme.Core.Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/core_input_passport_validate_date">

            <com.santalu.maskara.widget.MaskEditText
                style="@style/Theme.Core.Input.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"
                app:mask="**.**.****"
                app:maskCharacter="*"
                app:maskStyle="completable" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</RelativeLayout>